tp2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: my-deployment
      labels:
        app: nginx
    spec:
      containers:
        - name: http-server
          image: nginx:latest
          ports:
            - containerPort: 80
