tp2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: my-namespace
spec:
  selector:
    app: my-deployment
  ports:
    - protocol: TCP
      port: 80
